# open-shrimp

./: .gitignore  CLAUDE.md  Dockerfile.claude  Dockerfile.computer-use  Dockerfile.opencode  Dockerfile.openshrimp  README.md  VERSION  config.example.yaml  entitlements.plist  pyproject.toml  seccomp-dind.json  setup_app.py
.github/workflows/: docs.yml  notary-log.yaml  release.yaml
android/companion/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
android/security-key-companion/: README.md  build.gradle  settings.gradle
computer-use/: autostart  entrypoint.sh  rc.xml  seat-keyboard.c
docs/: pdf-review-plan.md
moonshine-stt/: pyproject.toml
moonshine-stt/src/moonshine_stt/: __init__.py  audio.py  download.py  main.py  model.py  tokenizer.py
patches/: PIN  README.md  lima-vznc-display.patch  virtiofsd-mountinfo-unescape.patch
plugins/opencode-apply-patch-large-delete-guard/: README.md  package.json
src/open_shrimp/: agent.py  agent_status.py  bot.py  (+40 more)
tests/: test_agent_runtime.py  test_agent_status_api.py  test_agent_task_terminal.py  test_agent_tasks_notifications.py  test_approval_keyboard.py  test_assistant_error_copy.py  test_bot_command_gating.py  test_client_manager_backend_swap.py  test_client_manager_degraded.py  test_config_app_models.py  test_config_app_patch.py  test_config_backend.py  test_config_events.py  test_container.py  test_cross_context.py  test_event_pickup.py  test_event_sink.py  test_git_diff.py  test_git_stage.py  test_hooks_path_scope.py  test_host_monitor.py  test_inbound_events_db.py  test_lark_adapter.py  test_libvirt_helpers.py  test_managed_opencode_config.py  test_meetings.py  test_phone_use_polish.py  test_reach.py  test_resolve_backend.py  test_resume_sandbox_sessions.py  test_rfb_filter.py  test_rfb_snapshot.py  test_running_state_followups.py  test_sandbox_bundles.py  test_sandbox_runtime_swap.py  test_schedule_runner.py  test_security_key_helper_optional.py  test_service.py  test_session_runner.py  test_setup.py  (+8 more)
vznc/: Makefile  go.mod  server.go  server.h  server.m  server_test.go  vznc.entitlements
website/: astro.config.mjs  package-lock.json  package.json
(+354 files in other folders)
