[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-udang"
dynamic = ["version"]
description = "Telegram bot for remote Claude access via the Agent SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "python-telegram-bot[httpx,job-queue]",
    "aiosqlite",
    "pyyaml",
    "mistune>=3.0,<4.0",
    "starlette",
    "uvicorn[standard]",
    "tree-sitter>=0.23,<1.0",
    "tree-sitter-bash>=0.23,<1.0",
    "platformdirs>=4.0",
    "watchfiles>=1.0",
]

[project.optional-dependencies]
macos = ["rumps>=0.4"]

[project.scripts]
openudang = "open_udang.main:main"

[project.gui-scripts]
openudang-app = "open_udang.platform.macos.app:main"

[tool.hatch.build.targets.sdist.force-include]
"web/review-app/dist" = "web/review-app/dist"
"web/terminal-app/dist" = "web/terminal-app/dist"
"web/markdown-app/dist" = "web/markdown-app/dist"
"Dockerfile.claude" = "Dockerfile.claude"
"seccomp-dind.json" = "seccomp-dind.json"

[tool.hatch.build.targets.wheel.force-include]
"web/review-app/dist" = "open_udang/review/static"
"web/terminal-app/dist" = "open_udang/terminal/static"
"web/markdown-app/dist" = "open_udang/preview/static"
"Dockerfile.claude" = "open_udang/Dockerfile.claude"
"seccomp-dind.json" = "open_udang/seccomp-dind.json"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx",
]
